# Censor

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  manifest
.beads/: metadata.json
.beads/hooks/: post-commit
_Docs/: LessonsLearned.md
_Docs/Specs/: SPEC-censor-core.md  SPEC-censor-plugin.md  SPEC-censor-tessera-contract.md  SPEC-censor-ui.md
_Docs/Specs/_Archive/: README.md  SPEC-censor-tessera-contract.md
include/: censor_abi.h
src/: censor.cpp  censor_plugin.cpp
tests/: test_poison_banner.cpp  test_smoke_dlopen.cpp
